exports[`<DeviceCategoryTemplate /> render matches snapshot with zero, one and many cards 1`] = `
<section
  className="device-category">
  <div
    className="container">
    <div
      className="row">
      <div
        className="col-xs-12 catalog-header">
        <h1>
          
        </h1>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-xs-offset-2 col-xs-8 col-sm-12 col-sm-offset-0 col-md-offset-1 col-md-10">
        <ul
          className="mp-content left" />
      </div>
    </div>
    <div
      className="row" />
  </div>
</section>
`;

exports[`<DeviceCategoryTemplate /> render matches snapshot with zero, one and many cards 2`] = `
<section
  className="device-category">
  <div
    className="container">
    <div
      className="row">
      <div
        className="col-xs-12 catalog-header">
        <h1>
          
        </h1>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-xs-offset-2 col-xs-8 col-sm-12 col-sm-offset-0 col-md-offset-1 col-md-10">
        <ul
          className="mp-content left">
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="row" />
  </div>
</section>
`;

exports[`<DeviceCategoryTemplate /> render matches snapshot with zero, one and many cards 3`] = `
<section
  className="device-category">
  <div
    className="container">
    <div
      className="row">
      <div
        className="col-xs-12 catalog-header">
        <h1>
          
        </h1>
      </div>
    </div>
    <div
      className="row">
      <div
        className="col-xs-offset-2 col-xs-8 col-sm-12 col-sm-offset-0 col-md-offset-1 col-md-10">
        <ul
          className="mp-content left">
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
          <li>
            <a
              href="/admin/devices/category1/undefined"
              onClick={[Function anonymous]}>
              <h3
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "title"
                  }
                } />
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="row" />
  </div>
</section>
`;
